<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/volume_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/dialog_volume_music"/>
        <SeekBar
            android:id="@+id/volume_music"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true">
        </SeekBar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/dialog_volume_ring"/>
        <SeekBar
            android:id="@+id/volume_ring"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true">
        </SeekBar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/dialog_volume_call"/>
        <SeekBar
            android:id="@+id/volume_call"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true">
        </SeekBar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/dialog_volume_system"/>
        <SeekBar
            android:id="@+id/volume_system"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true">
        </SeekBar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/dialog_volume_alarm"/>
        <SeekBar
            android:id="@+id/volume_alarm"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true">
        </SeekBar>
    </LinearLayout>

</LinearLayout>